--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -1,39 +1,67 @@
-.cart-items {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    max-height: 20rem;
-    overflow: auto;
-}
-.total {
+.cart-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-weight: bold;
-    font-size: 1.5rem;
+    border-bottom: 2px solid #8a2b06;
+    padding: 1rem 0;
     margin: 1rem 0;
-}
-.actions {
-    text-align: right;
-}
-.actions button {
+    max-height: 20rem;
+    overflow: scroll;
+  }
+  
+  .cart-item h2 {
+    margin: 0 0 0.5rem 0;
+    color: #363636;
+  }
+  
+  .summary {
+    width: 10rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .price {
+    font-weight: bold;
+    color: #8a2b06;
+  }
+  
+  .amount {
+    font-weight: bold;
+    border: 1px solid #ccc;
+    padding: 0.25rem 0.75rem;
+    border-radius: 6px;
+    color: #363636;
+  }
+  
+  .actions {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  @media (min-width: 768px) {
+    .actions {
+      flex-direction: row;
+    }
+  }
+  
+  .cart-item button {
     font: inherit;
-    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.25rem;
+    color: #8a2b06;
+    border: 1px solid #8a2b06;
+    width: 3rem;
+    text-align: center;
+    border-radius: 6px;
     background-color: transparent;
-    border: 1px solid #8A2B06;
-    padding: 0.5rem 2rem;
-    border-radius: 25px;
+    cursor: pointer;
     margin-left: 1rem;
-}
-.actions button:hover, .actions button:active {
-    background-color: #5A1A01;
-    border-color: #5A1A01;
+    margin: 0.25rem;
+  }
+  
+  .cart-item button:hover,
+  .cart-item button:active {
+    background-color: #8a2b06;
     color: white;
-}
-.actions .button--alt {
-    color: #8A2B06;
-}
-.actions .button {
-    background-color: #8A2B06;
-    color: white;
-}
+  } 
