--- a/src/components/Cart/Checkout.module.css
+++ b/src/components/Cart/Checkout.module.css
@@ -1,11 +1,12 @@
 .form {
     margin: 1rem 0;
     height: 19rem;
-    overflow: auto;
+    overflow: scroll;
   }
   
   .control {
     margin-bottom: 0.5rem;
+    
   }
   
   .control label {
